<resources>
    <string name="app_name">MRApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="item_add">Add Patient</string>
    <string name="item_update">Update Patient</string>
    <string name="item_delete">Delete Patient</string>
    <string name="item_view">View Patients</string>
    <string name="item_schedule">Scheduled patients</string>
    <string name="item_logout">LOG OUT</string>

    <string name="title_activity_add_patient">AddPatient</string>
    <string name="patient_name">Patient\'s Name</string>
    <string name="patient_age">Date Of Birth</string>
    <string name="disease">Disease</string>
    <string name="prescription">Prescription</string>
    <string name="drug">Drug Given</string>
    <string name="returndate">Return Date</string>
    <string name="remark">Remarks</string>
    <string name="save">SAVE</string>
    <string name="home_nav">Home</string>

    <string-array name="action_list">

        <item>@string/home_nav</item>
        <item>@string/item_add</item>
        <item>@string/item_view</item>
        <item>@string/item_update</item>
        <item>@string/item_delete</item>
        <item>@string/item_schedule</item>
        <item>@string/item_logout</item>
    </string-array>
    <array name="action_images">
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>
        <item>@drawable/a_home</item>

    </array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="title_activity_registration_screen">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="securityhint">Security Hint</string>
    <string name="repassword">Re-enter Password</string>
    <string name="showpassword">show password</string>
    <string name="department">Derpartment</string>
    <string name="getpassword">Get Password</string>
    <string name="yourpassword">Your Password Is</string>
    <string name="entersecurityhint">Enter Security Hint</string>
</resources>
