<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ee"
    android:orientation="vertical"
    tools:context="example.com.mrapp.RegistrationScreen">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30sp"
            android:paddingRight="30sp">

            <LinearLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rtextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/username_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="text"
                    android:background="@drawable/corner_edittext"
                    android:layout_marginTop="10dp">

                    <requestFocus />
                </EditText>
                <TextView
                    android:id="@+id/rtextView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/department"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/derpartment_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp"
                    android:background="@drawable/corner_edittext">
                </EditText>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/rtextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLength="9"
                    android:padding="5dp"
                    android:background="@drawable/corner_edittext">

                    <requestFocus />
                </EditText>

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/showpassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/rtextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/repassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/repassword_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:background="@drawable/corner_edittext">
                </EditText>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/securityhint"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/securityhint_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp"
                    android:background="@drawable/corner_edittext">

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/register"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

