<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/dd"
    tools:context="example.com.mrapp.LoginScreen">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="30sp">


        <TextView
            android:id="@+id/ltextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/ledittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ltextview"
            android:layout_marginTop="20sp"
            android:background="@drawable/corner_edittext"
            android:ems="10"
            android:inputType="text"
            android:padding="10sp">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/ltextview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ledittext"
            android:layout_marginTop="20sp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/ledittext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ltextview1"
            android:layout_marginTop="20sp"
            android:background="@drawable/corner_edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10sp">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/corner_button"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/corner_button"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#007FFF" />
    </RelativeLayout>

</RelativeLayout>
