<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ff"
    android:orientation="vertical"
    tools:context="example.com.mrapp.RegistrationScreen">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30sp"
            android:paddingRight="30sp">

            <LinearLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/patientname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/patientname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:inputType="text">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_age"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/age_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:inputType="date">

                </EditText>

                <TextView
                    android:id="@+id/disease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disease"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/disease_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:inputType="text">

                </EditText>

                <TextView
                    android:id="@+id/prescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/prescription"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/prescription_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp">

                </EditText>

                <TextView
                    android:id="@+id/drug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/drug"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/drug_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLength="9"
                    android:padding="5dp">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/returndate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/returndate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/returndate_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:ems="10"
                    android:inputType="date"
                    android:padding="5dp">

                </EditText>

                <TextView
                    android:id="@+id/remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/remark"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/remarks_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_edittext"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp">
                </EditText>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

