<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical"
    android:paddingLeft="10sp"
    android:paddingRight="10sp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"/>

            <EditText
                android:layout_below="@+id/textView"
                android:id="@+id/user_hint_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:padding="5dp"
                android:background="@drawable/corner_edittext">

            </EditText>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_below="@+id/user_hint_edt"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entersecurityhint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"/>

            <EditText
                android:layout_below="@+id/textView1"
                android:id="@+id/security_hint_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:padding="5dp"
                android:background="@drawable/corner_edittext">

            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/security_hint_edt"
                android:layout_marginTop="15dp"
                android:text="@string/yourpassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF0000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/getpassword_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/getpassword"
                android:background="@drawable/corner_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:background="@drawable/corner_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>